@@ -119,6 +119,8 @@ Release 2.0.3-alpha - Unreleased
 
     HDFS-3985. Add timeouts to TestMulitipleNNDataBlockScanner. (todd via eli)
 
+    HDFS-4061. TestBalancer and TestUnderReplicatedBlocks need timeouts. (eli)
+
 Release 2.0.2-alpha - 2012-09-07 
   
   INCOMPATIBLE CHANGES
